# go-python-memory-size-test

./: Dockerfile.python  main.py  pyproject.toml
