[tool.poetry]
name = "docker-size-test"
version = "0.1.0"
description = ""
authors = ["Pusztai Máté <pusztai.mate@lexunit.hu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
